* 2015-06-28 4.0
  --disable-standalone
  add --watch-bgp-peers
  bugfix in f5-pool-checks, where oids are not available during a transition"
* 2015-06-25 3.5.4
  allow --name dest/cidr for mode count-routes
* 2015-06-22 3.5.3
  fix a bug in f5 member connection limit noSuchInstance
  add mode count-routes (find mpls problems)
  add mode count-bgp-peers
* 2015-05-06 3.5.2
  add --community2 (necessary if there are different ospf contexts)
  raise max-repetitions for table-bulk-requests (large number of interfaces)
* 2015-04-19 3.5.1
  add LM-SENSOR-MIB
  bugfix in thresholds of morphed performancedata
* 2015-04-09 3.5
  implement ospf and modes ospf-neighbor-status and list-ospf-neighbors
* 2015-03-29 3.4.4.3
  separate discards from errors in linuxlocal
* 2015-03-03 3.4.4.2
  combine pool-connections and pool-completion for f5
  finish pool-complections
* 2015-02-28 3.4.4.1
  detect (not implement!) netgear
* 2015-02-26 3.4.4
  add mode pool-connections for f5
* 2015-02-19 3.4.3
  allow mitigation of admin down bgp peer
  add morphperfdata
* 2015-01-30 3.4.2.8
  bugfix in GLPlugin (multiple --negate)
* 2015-01-28 3.4.2.7
  more trailing null cleanup. (Thanks Jörg Linge)
* 2015-01-27 3.4.2.6
  bugfix in interface-usage windows+snmp+trailing null in ifDescr. (Thanks Jörg Linge)
* 2015-01-14 3.4.2.5
  bugfix in interface-status and snmp-table-get (no more false 64bit interfaces)
* 2015-01-08 3.4.2.4
  shorten interface-output with report=short
* 2015-01-05 3.4.2.3
  fix a perl-bug in F5 (was introduced in 3.4.2)
* 2015-01-02 3.4.2.2
  fix lsmpi_io for cisco asr1000 (Thanks Andreas Schulz)
  fix Fritz!Box upnp control url (Thanks Bernd)
* 2014-12-23 3.4.2.1
  use fallbacks to find fexes (cefexConfigTable may not be populated)
* 2014-12-16 3.4.2
  use cefexConfigTable for mode watch-fexes
  bugfix in cisco nexus sensors (had undef perl warnings)
* 2014-12-12 3.4.1
  bugfix in bluecoat hardware (skip perfdata of missing psus)
* 2014-12-11 3.4